[tool.poetry]
name = "stwp-mongodb-helper"
version = "0.1.1"
description = ""
authors = ["saveweb <saveweb@saveweb.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^4.6.3"

[tool.poetry.scripts]
grass_generator = "stwp_mongodb_helper.grass_generator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
