[tool.poetry]
name = "stwp-mongodb-helper"
version = "0.1.4"
description = ""
authors = ["saveweb <saveweb@saveweb.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^4.6.3"
tqdm = "^4.66.2"
motor = "^3.4.0"

[tool.poetry.scripts]
grass_generator = "stwp_mongodb_helper.grass_generator:main"
grass_requeue = "stwp_mongodb_helper.grass_requeue:main"
grass_dedup = "stwp_mongodb_helper.grass_dedup:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
